k8s/operator-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator-app
  namespace: operator-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: operator-app
  template:
    metadata:
      labels:
        app: operator-app
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: operator
          effect: NoSchedule
      nodeSelector:
        role: operator-worker
      containers:
        - name: operator-app
          image: __DOCKERHUB_USERNAME__/operator-app:latest  # Docker Hub 계정명으로 교체
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
