k8s/operator-app/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-backend
  namespace: operator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: op-backend
  template:
    metadata:
      labels:
        app: op-backend
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: operator
          effect: NoSchedule
      nodeSelector:
        role: operator-worker
      containers:
        - name: op-backend
          image: wooyeol43/op-backend:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: op-backend
  namespace: operator-app
spec:
  selector:
    app: op-backend
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
