k8s/operator-app/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-frontend
  namespace: operator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: op-frontend
  template:
    metadata:
      labels:
        app: op-frontend
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: operator
          effect: NoSchedule
      nodeSelector:
        role: operator-worker
      containers:
        - name: op-frontend
          image: wooyeol43/op-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: op-frontend
  namespace: operator-app
spec:
  selector:
    app: op-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
