k8s/operator-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operator-ingress
  namespace: operator-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /operator/api
            pathType: Prefix
            backend:
              service:
                name: op-backend
                port:
                  number: 4000
          - path: /operator
            pathType: Prefix
            backend:
              service:
                name: op-frontend
                port:
                  number: 80
